--- a/src/main/resources/templates/wizards.html
+++ b/src/main/resources/templates/wizards.html
@@ -38,7 +38,7 @@
         <th>Birth place</th>
         <th>Biography</th>
         <th>Muggle</th>
-        <th></th>
+        <th>School</th>
         <th></th>
     </tr>
     </thead>
